--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "@radix-ui/themes": "^2.0.0",
+    "add": "^2.0.6",
+    "label": "^0.2.2",
     "next": "13.5.5",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "shadcn-ui": "^0.4.1"
   },
   "devDependencies": {
     "@types/node": "^20.8.6",
