--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "add": "^2.0.6",
     "label": "^0.2.2",
     "next": "13.5.5",
+    "openssl-nodejs": "^1.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "shadcn-ui": "^0.4.1"
