--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,4 +1,4 @@
-name: Docker Image CI
+name: Docker Build, Push and Release
 
 on:
   push:
@@ -8,11 +8,25 @@ on:
 
 jobs:
 
-  build:
-
+  build-push-and-release:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+    -
+      name: Set up QEMU
+      uses: docker/setup-qemu-action@v3
+    - 
+      name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+    -
+      name: Login to Docker Hub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_PASSWORD }}
+    - 
+      name: Build and push Docker image
+      uses: docker/build-push-action@v6 
+      with:
+        push: true
+        tags: ${{ secrets.DOCKERHUB_USERNAME }}/sslhelper:latest
