--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -26,7 +26,9 @@ jobs:
         password: ${{ secrets.DOCKERHUB_PASSWORD }}
     - 
       name: Build and push Docker image
-      uses: docker/build-push-action@v6 
+      uses: docker/build-push-action@v6
+      env: 
+        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
       with:
         push: true
         tags: ${{ secrets.DOCKERHUB_USERNAME }}/sslhelper:latest, ghcr.io/${{ github.repository }}/sslhelper:latest
